<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Playlist Maker</string>
     <string name="playlist_maker_title">Playlist maker</string>
     <string name="search">Поиск</string>
     <string name="media_library">Медиатека</string>
     <string name="settings">Настройки</string>
     <string name="search_description">Поиск</string>
     <string name="media_library_description">Медиатека</string>
     <string name="settings_description">Настройки</string>


     <string name="settings_title">Настройки</string>
     <string name="back_button">Назад</string>
     <string name="dark_theme">Темная тема</string>
     <string name="share_app">Поделиться приложением</string>
     <string name="contact_support">Написать в поддержку</string>
     <string name="user_agreement">Пользовательское соглашение</string>
     <string name="share_app_description">Поделиться</string>
     <string name="contact_support_description">Поддержка</string>
     <string name="user_agreement_description">Соглашение</string>

     <string name="practicum_android_course_url">https://practicum.yandex.ru/android-developer/</string>
     <string name="share_message_text">Посмотри курс по Android‑разработке в Практикуме: %1$s</string>

     <string name="support_email">kis.nik.99@example.com</string>
     <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
     <string name="email_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>

     <string name="practicum_offer_url">https://yandex.ru/legal/practicum_offer/ru/</string>

     <string name="title">Поиск</string>
     <string name="search_hint">Поиск</string>
     <string name="back_button_description">Назад</string>
     <string name="clear_search_description">Очистить поиск</string>
     <string name="x">x</string>

    <string name="some_id">Ничего не нашлось</string>
    <string name="search_error_text">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="retry_label">Обновить</string>

    <string name="ys_medium_1">Вы искали</string>
    <string name="label">Очистить историю</string>

    <string name="label_duration">Длительность</string>
    <string name="label_album">Альбом</string>
    <string name="label_year">Год</string>
    <string name="label_genre">Жанр</string>
    <string name="label_country">Страна</string>

    <string name="player_time_zero">00:00</string>

    <string name="media_library_title">Медиатека</string>
    <string name="playlists_tab">Плейлисты</string>
    <string name="favorites_tab">Избранные треки</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="empty_playlists">Вы не создали \nни одного плейлиста</string>
    <string name="empty_favorites">Ваша медиатека пуста</string>

    <string name="create_playlist_title">Создание плейлиста</string>
    <string name="edit_playlist_title">Редактировать</string>
    <string name="save_playlist_button">Сохранить</string>
    <string name="playlist_name">Название</string>
    <string name="playlist_name_hint">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="create">Создать</string>
    <string name="finish_dialog_title">Завершить создание плейлиста?</string>
    <string name="finish_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="playlist_created">Плейлист %1$s создан</string>
    <string name="added_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="track_already_in_playlist">Трек уже добавлен в плейлист %1$s</string>
    <string name="add_to_playlist">Добавить в плейлист</string>

    <string name="playlist_detail_title">Плейлист</string>
    <string name="playlist_detail_share">Поделиться</string>
    <string name="playlist_detail_menu">Меню</string>
    <string name="playlist_tracks_list_placeholder">Список треков</string>
    <plurals name="playlist_detail_minutes">
        <item quantity="zero">%d минут</item>
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
    <plurals name="playlist_detail_tracks">
        <item quantity="zero">%d треков</item>
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>
    <string name="best_songs_">Best songs 2021</string>

    <string name="playlist_delete_track_title">Хотите удалить трек?</string>
    <string name="playlist_delete_track_no">НЕТ</string>
    <string name="playlist_delete_track_yes">ДА</string>

    <string name="playlist_share_no_tracks">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="playlist_share_chooser_title">Поделиться плейлистом</string>
    <string name="playlist_menu_share">Поделиться</string>
    <string name="playlist_menu_edit">Редактировать информацию</string>
    <string name="playlist_menu_delete">Удалить плейлист</string>
    <string name="playlist_delete_playlist_title">Удалить плейлист</string>
    <string name="playlist_delete_playlist_message">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="playlist_delete_playlist_cancel">Отмена</string>
    <string name="playlist_delete_playlist_confirm">Удалить</string>
    <string name="playlist_detail_empty_tracks">В этом плейлисте нет треков</string>
 </resources>