<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:title="@string/settings_title"
        app:navigationIcon="@drawable/ic_back"
        app:navigationIconTint="@color/text_black" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/white"
        android:paddingHorizontal="16dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dark_theme"
            android:textSize="16sp"
            android:textColor="@color/text_black" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_dark_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:thumbTint="@color/switch_thumb"
            app:trackTint="@color/switch_track" />

    </LinearLayout>


    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20dp"
        android:text="@string/share_app"
        android:textSize="16sp"
        android:textColor="@color/text_black"
        android:drawableEnd="@drawable/ic_share"
        android:gravity="center_vertical" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20dp"
        android:text="@string/contact_support"
        android:textSize="16sp"
        android:textColor="@color/text_black"
        android:drawableEnd="@drawable/ic_support"
        android:gravity="center_vertical" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20dp"
        android:text="@string/user_agreement"
        android:textSize="16sp"
        android:textColor="@color/text_black"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:gravity="center_vertical" />

</LinearLayout>