<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="?attr/colorSurface">

     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorSurface"
         app:title="@string/title"
         app:titleTextColor="?attr/colorOnSurface"
         app:contentInsetStart="60dp"
         android:layout_marginBottom="24dp"
         app:titleTextAppearance="@style/SettingsTitleStyle"/>

     <ImageView
         android:id="@+id/back_button"
         android:layout_width="@dimen/icon_size_settings"
         android:layout_height="@dimen/icon_size_settings"
         android:layout_gravity="start"
         android:layout_marginStart="16dp"
         android:contentDescription="@string/back_button"
         android:src="@drawable/outline_arrow_back_24"
         app:tint="?attr/colorOnSurface"
         android:clickable="true"
         android:focusable="true"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:layout_marginTop="-64dp"/>


     <FrameLayout
         android:id="@+id/search_container"
         android:layout_width="match_parent"
         android:layout_height="36dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="24dp"
         android:background="@drawable/x_base_sear">

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal"
             android:gravity="center_vertical">

             <ImageView
                 android:id="@+id/search_icon"
                 android:layout_width="16dp"
                 android:layout_height="16dp"
                 android:layout_marginStart="12dp"
                 android:contentDescription="@string/search_description"
                 android:src="@drawable/ic_search"
                 app:tint="@color/search_icon_tint" />

             <EditText
                 android:id="@+id/search_edit_text"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
                 android:fontFamily="@font/ys_display_regular"
                 android:background="@android:color/transparent"
                 android:hint="@string/search_hint"
                 android:inputType="text"
                 android:maxLines="1"
                 android:textSize="16sp"
                 android:imeOptions="actionSearch"
                 android:padding="0dp"
                 android:textColor="@color/search_text_color"
                 android:textColorHint="@color/search_hint_color"
                 android:autofillHints="text" />

         </LinearLayout>

         <TextView
             android:id="@+id/clear_button"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_gravity="end|center_vertical"
             android:layout_marginEnd="12dp"
             android:text="@string/x"
             android:textAppearance="@style/ClearButtonStyle"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:clickable="true"
             android:focusable="true"
             android:visibility="gone"
             android:contentDescription="@string/clear_search_description" />


     </FrameLayout>
 </LinearLayout>