<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mediaLibraryFragment">

    <fragment
        android:id="@+id/mediaLibraryFragment"
        android:name="com.practicum.playlistmaker.presentation.media.MediaLibraryFragment"
        android:label="Медиатека"
        tools:layout="@layout/fragment_media_library">
        <action
            android:id="@+id/action_mediaLibrary_to_createPlaylist"
            app:destination="@id/createPlaylistFragment" />
        <action
            android:id="@+id/action_mediaLibrary_to_playlistDetail"
            app:destination="@id/playlistDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/createPlaylistFragment"
        android:name="com.practicum.playlistmaker.presentation.create_playlist.CreatePlaylistFragment"
        android:label="@string/create_playlist_title"
        tools:layout="@layout/fragment_create_playlist" />

    <fragment
        android:id="@+id/editPlaylistFragment"
        android:name="com.practicum.playlistmaker.presentation.create_playlist.EditPlaylistFragment"
        android:label="@string/edit_playlist_title"
        tools:layout="@layout/fragment_create_playlist">
        <argument
            android:name="playlist_id"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/playlistDetailFragment"
        android:name="com.practicum.playlistmaker.presentation.playlist_detail.PlaylistDetailFragment"
        android:label="@string/playlist_detail_title"
        tools:layout="@layout/fragment_playlist_detail">
        <argument
            android:name="playlist_id"
            app:argType="long" />
        <action
            android:id="@+id/action_playlistDetail_to_audioPlayer"
            app:destination="@id/audioPlayerFragment" />
        <action
            android:id="@+id/action_playlistDetail_to_editPlaylist"
            app:destination="@id/editPlaylistFragment" />
    </fragment>

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.practicum.playlistmaker.presentation.search.SearchFragment"
        android:label="Поиск"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.practicum.playlistmaker.presentation.settings.SettingsFragment"
        android:label="Настройки"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/audioPlayerFragment"
        android:name="com.practicum.playlistmaker.presentation.audio.AudioPlayerFragment"
        android:label="Аудиоплеер"
        tools:layout="@layout/fragment_audio_player">
        <action
            android:id="@+id/action_audioPlayer_to_createPlaylist"
            app:destination="@id/createPlaylistFragment" />
    </fragment>

</navigation>